firmware/build/log/idf_py_stdout_output_28048
[1/16] Linking C static library esp-idf\mqtt_service\libmqtt_service.a
[2/16] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Abhisek\Projects\EdgeGuard\firmware\build\bootloader\esp-idf\esptool_py && d:\Abhisek\Projects\esp32\tools\python_env\idf5.4_py3.11_env\Scripts\python.exe D:/Abhisek/Projects/esp32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Abhisek/Projects/EdgeGuard/firmware/build/bootloader/bootloader.bin"
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[3/16] No install step for 'bootloader'
[4/16] Completed 'bootloader'
[5/16] Building C object esp-idf/led_alert/CMakeFiles/__idf_led_alert.dir/led_alert.c.obj
FAILED: esp-idf/led_alert/CMakeFiles/__idf_led_alert.dir/led_alert.c.obj 
ccache D:\Abhisek\Projects\esp32\tools\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4-rc1-1-g25a1ad7e98\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Abhisek/Projects/EdgeGuard/firmware/build/config -ID:/Abhisek/Projects/EdgeGuard/firmware/components/led_alert/include -ID:/Abhisek/Projects/EdgeGuard/firmware/main -ID:/Abhisek/Projects/esp32/esp-idf/components/newlib/platform_include -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/config/include -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/config/include/freertos -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/config/xtensa/include -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Abhisek/Projects/esp32/esp-idf/components/freertos/esp_additions/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/include/soc -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/include/soc/esp32 -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/dma/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/ldo/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/debug_probe/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/port/esp32/. -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_hw_support/port/esp32/include -ID:/Abhisek/Projects/esp32/esp-idf/components/heap/include -ID:/Abhisek/Projects/esp32/esp-idf/components/heap/tlsf -ID:/Abhisek/Projects/esp32/esp-idf/components/log/include -ID:/Abhisek/Projects/esp32/esp-idf/components/soc/include -ID:/Abhisek/Projects/esp32/esp-idf/components/soc/esp32 -ID:/Abhisek/Projects/esp32/esp-idf/components/soc/esp32/include -ID:/Abhisek/Projects/esp32/esp-idf/components/soc/esp32/register -ID:/Abhisek/Projects/esp32/esp-idf/components/hal/platform_port/include -ID:/Abhisek/Projects/esp32/esp-idf/components/hal/esp32/include -ID:/Abhisek/Projects/esp32/esp-idf/components/hal/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_rom/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_rom/esp32/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_rom/esp32/include/esp32 -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_rom/esp32 -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_common/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_system/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_system/port/soc -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_system/port/include/private -ID:/Abhisek/Projects/esp32/esp-idf/components/xtensa/esp32/include -ID:/Abhisek/Projects/esp32/esp-idf/components/xtensa/include -ID:/Abhisek/Projects/esp32/esp-idf/components/xtensa/deprecated_include -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/include -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/include/apps -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/include/apps/sntp -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/lwip/src/include -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/port/include -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/port/freertos/include -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/port/esp32xx/include -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/Abhisek/Projects/esp32/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/Abhisek/Projects/esp32/esp-idf/components/driver/deprecated -ID:/Abhisek/Projects/esp32/esp-idf/components/driver/i2c/include -ID:/Abhisek/Projects/esp32/esp-idf/components/driver/touch_sensor/include -ID:/Abhisek/Projects/esp32/esp-idf/components/driver/twai/include -ID:/Abhisek/Projects/esp32/esp-idf/components/driver/touch_sensor/esp32/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_pm/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_ringbuf/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_gpio/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_pcnt/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_gptimer/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_spi/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_mcpwm/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_ana_cmpr/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_i2s/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_sdmmc/include -ID:/Abhisek/Projects/esp32/esp-idf/components/sdmmc/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_sdspi/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_sdio/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_dac/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_rmt/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_tsens/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_sdm/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_i2c/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_uart/include -ID:/Abhisek/Projects/esp32/esp-idf/components/vfs/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_ledc/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_parlio/include -ID:/Abhisek/Projects/esp32/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Abhisek/Projects/EdgeGuard/firmware=. -fmacro-prefix-map=D:/Abhisek/Projects/esp32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/led_alert/CMakeFiles/__idf_led_alert.dir/led_alert.c.obj -MF esp-idf\led_alert\CMakeFiles\__idf_led_alert.dir\led_alert.c.obj.d -o esp-idf/led_alert/CMakeFiles/__idf_led_alert.dir/led_alert.c.obj -c D:/Abhisek/Projects/EdgeGuard/firmware/components/led_alert/led_alert.c
D:/Abhisek/Projects/EdgeGuard/firmware/components/led_alert/led_alert.c: In function 'led_alert_blink':
D:/Abhisek/Projects/EdgeGuard/firmware/components/led_alert/led_alert.c:28:81: error: expected ';' before ')' token
   28 |         ESP_RETURN_ON_ERROR(led_alert_set(false), TAG, "failed to turn led off"));
      |                                                                                 ^
[6/16] Building C object esp-idf/event_manager/CMakeFiles/__idf_event_manager.dir/event_manager.c.obj
[7/16] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
